# othello-storm-system-backend

./: .gitignore  Cargo.toml  Procfile  README.md  env.env
migrations/2020-03-11-171022_create_users/: up.sql
migrations/2020-07-03-134235_add_tournaments/: up.sql
migrations/2020-07-03-134235_create_tournaments/: down.sql  up.sql
migrations/2020-09-28-003459_add_tournaments_admin/: down.sql  up.sql
migrations/2020-12-17-012823_add_players/: down.sql  up.sql
migrations/2021-01-20-021849_add_rounds_matches/: down.sql  up.sql
migrations/2021-01-23-071900_add_start_end_date_tournament/: down.sql  up.sql
migrations/2021-04-06-143521_remove_player_fkey/: down.sql  up.sql
src/: account.rs  errors.rs  external_services.rs  main.rs  properties.rs  schema.rs  utils.rs
src/account/: account.rs  account_admin.rs  account_factory.rs  account_superuser.rs  account_visitor.rs  mod.rs
src/database_models/: match_models.rs  mod.rs  player_models.rs  round_models.rs  tournament_admin_models.rs  tournament_models.rs  user_models.rs
src/game_match/: abstract_game_match.rs  bye_match.rs  factories.rs  mod.rs  normal_match.rs  unfinished_match.rs
src/joueurs/: joueurs.rs  joueurs_name_parser.rs  joueurs_parser.rs  joueurs_player_parser.rs  mod.rs
src/meta_generator/: helpers.rs  match_meta_generator.rs  meta_generator.rs  mod.rs  player_meta_generators.rs  round_meta_generators.rs  standing_meta_generators.rs  summary_meta_generators.rs  tournament_meta_generator.rs  tournament_meta_generators.rs  user_meta_generator.rs  user_meta_generators.rs
src/models/: mod.rs  user_models.rs
src/pairings_generator/: abstract_pairings_generator.rs  factories.rs  helpers.rs  mod.rs  rr_pairings_generator.rs  swiss_pair_pairings_generator.rs  swiss_pairings_generator.rs
src/permissions/: access_control.rs  jwt.rs  jwt_claim.rs  mod.rs
src/response_commands/: command_trait.rs  general_commands.rs  helpers.rs  mod.rs  player_commands.rs  round_match_commands.rs  tournament_admin_commands.rs  tournament_commands.rs  tournament_summary_commands.rs  user_commands.rs
src/routes/: general_routes.rs  mod.rs  player_routes.rs  request_guards.rs  response.rs  round_match_routes.rs  tournament_admin_routes.rs  tournament_routes.rs  user_routes.rs
src/tournament_manager/: game_match.rs  joueurs.rs  joueurs_parser.rs  (+5 more)
(+8 files in other folders)
