[package]
name = "oss_backend"
version = "0.1.0"
authors = ["Maxheart <samuelhenrykurniawan@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web framework
rocket = "0.4.4"
rocket_contrib = { version = "0.4.5", features = ["json"] }

# ORM
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"
lazy_static = "1.4.0"

# password hashing
pwhash = "0.3"

# jwt
jsonwebtoken = "5"
serde = { version = "1.0", features = ["derive"] }

# random
rand = "0.7"

# mock
mocktopus = "0.7.0"

# log
log = "0.4.0"
env_logger = "0.7.1"

# download from external sources
reqwest =  { version = "0.10.6", features=["blocking"] }
